data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3658.wast
;; 7. **Test Description**: Function call within a loop, verifying proper stack unwinding between iterations.    - **Constraint Checked**: Ensures loop iterations correctly reset stack states post function calls.    - **Improper Handling**: Detects issues where looped function calls do not properly reset, leading to data leakage across iterations.

(assert_invalid
  (module
    (func $f (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (func (result i32)
      (loop $l
        (call $f (i32.const 0))
        (br $l)
      )
    )
  )
  "stack overflow or improper handling of stack states in looped call"
)